# axum-prometheus

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: base.yml
examples/base-metric-layer-example/: Cargo.toml
examples/base-metric-layer-example/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/builder-example/: Cargo.toml
examples/builder-example/src/: main.rs
examples/endpoint-type-example/: Cargo.toml
examples/endpoint-type-example/src/: main.rs
examples/exporter-statsd-example/: Cargo.toml
examples/exporter-statsd-example/src/: main.rs
examples/exporter-tcp-example/: Cargo.toml
examples/exporter-tcp-example/src/: main.rs
examples/simple-example/: Cargo.toml
examples/simple-example/src/: main.rs
src/: body.rs  builder.rs  future.rs  layer.rs  lib.rs  service.rs  utils.rs
src/lifecycle/: body.rs  future.rs  layer.rs  mod.rs  service.rs
tests/: base.rs  common.rs  prefix.rs
tests/snapshots/: base__metric_handle_rendered_correctly.snap  prefix__metric_handle_rendered_correctly_with_prefix.snap
