[package]
name = "axum-prometheus"
version = "0.3.4"
edition = "2021"
homepage = "https://github.com/Ptrskay3/axum-prometheus"
license = "MIT"
description = "Prometheus metrics middleware for Axum"
keywords = ["axum", "prometheus", "metrics"]
categories = ["asynchronous", "network-programming", "web-programming", "development-tools::profiling"]
repository = "https://github.com/Ptrskay3/axum-prometheus"

[dependencies]
axum-core = "0.3.0"
axum = "0.6.1"
futures = "0.3.23"
http = "0.2.8"
http-body = "0.4.5"
metrics = "0.21.0"
metrics-exporter-prometheus = { version =  "0.12.0", optional =  true }
pin-project = "1.0.12"
tower = "0.4.13"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
tower-http = "0.4.0"
bytes = "1.2.1"
futures-core = "0.3.24"
matchit = "0.7"
once_cell = "1.17.0"

[dev-dependencies]
hyper = "0.14.20"

[features]
default = ["prometheus"]
prometheus = ["metrics-exporter-prometheus"]
