[package]
name = "axum-prometheus"
version = "0.6.1"
edition = "2021"
homepage = "https://github.com/Ptrskay3/axum-prometheus"
license = "MIT"
description = "A tower middleware to collect and export HTTP metrics for Axum"
keywords = ["axum", "prometheus", "metrics"]
categories = ["asynchronous", "network-programming", "web-programming", "development-tools::profiling"]
repository = "https://github.com/Ptrskay3/axum-prometheus"

[dependencies]
axum = "0.7.1"
futures = "0.3.23"
http = "1.0.0"
http-body = "1.0.0"
metrics = "0.23.0"
metrics-exporter-prometheus = { version =  "0.15.0", optional =  true, default-features = false, features = ["http-listener"] }
pin-project = "1.0.12"
tower = "0.4.13"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
tower-http = "0.5.0"
bytes = "1.2.1"
futures-core = "0.3.24"
matchit = "0.7"
once_cell = "1.17.0"
metrics-util = "0.17.0"

[dev-dependencies]
hyper = "1.0.1"
insta = { version = "1.31.0", features = ["yaml", "filters"] }
http-body-util = "0.1.0"

[features]
default = ["prometheus"]
prometheus = ["metrics-exporter-prometheus"]
push-gateway = ["metrics-exporter-prometheus/push-gateway"]

