[package]
name = "axum-prometheus"
version = "0.7.0"
edition = "2021"
homepage = "https://github.com/Ptrskay3/axum-prometheus"
license = "MIT"
description = "A tower middleware to collect and export HTTP metrics for Axum"
rust-version = "1.75"
keywords = ["axum", "prometheus", "metrics"]
categories = ["asynchronous", "network-programming", "web-programming", "development-tools::profiling"]
repository = "https://github.com/Ptrskay3/axum-prometheus"

[dependencies]
axum = "0.8.0"
http = "1.2.0"
http-body = "1.0.0"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.0", optional = true, default-features = false }
pin-project = "1.0.12"
tower = "0.5.1"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tower-http = "0.6.2"
bytes = "1.9.0"
futures-core = "0.3.24"
matchit = "0.8"

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml", "filters"] }
http-body-util = "0.1.0"

[features]
default = ["prometheus"]
prometheus = ["metrics-exporter-prometheus"]
push-gateway = ["metrics-exporter-prometheus/push-gateway"]
http-listener = ["metrics-exporter-prometheus/http-listener"]
