[package]
name = "exporter-statsd-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics-exporter-statsd = "0.7.0"
axum-prometheus = { path = "../../", default-features = false }

