[package]
name = "exporter-tcp-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.1"
metrics = "0.21.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics-exporter-tcp = "0.8.0"
axum-prometheus = { path = "../../", default-features = false }

