[package]
name = "simple-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum", branch = "main" }
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-prometheus = { path = "../../" }

